# phasor

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: phasor.rb
docs/: index.html
src/: agent.rs  app.rs  config.rs  discover.rs  main.rs  scan.rs  server.rs  server_index.html  session.rs  tmux.rs  transcript.rs
src/ui/: galaxy.rs  mod.rs
