[package]
name = "phasor"
version = "0.4.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
notify = "6"
portable-pty = "0.8"
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
futures-util = "0.3.32"
