[package]
name = "phasor"
version = "0.4.0"
edition = "2021"
description = "A terminal and browser dashboard to monitor and orchestrate every AI coding agent on your machine, via tmux."
authors = ["the phasor authors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/interpretica-io/phasor"
homepage = "https://interpretica-io.github.io/phasor/"
readme = "README.md"
keywords = ["tmux", "dashboard", "tui", "agents", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
notify = "6"
portable-pty = "0.8"
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
futures-util = "0.3.32"
