[package]
name = "phasor"
version = "0.5.0"
edition = "2021"
description = "A terminal and browser dashboard to monitor and orchestrate every AI coding agent on your machine, via tmux."
authors = ["the phasor authors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/interpretica-io/phasor"
homepage = "https://interpretica-io.github.io/phasor/"
readme = "README.md"
keywords = ["tmux", "dashboard", "tui", "agents", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
notify = "6"
portable-pty = "0.8"
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
futures-util = "0.3.32"

# Debian package metadata for `cargo deb` (https://github.com/kornelski/cargo-deb).
# `description`, `license`, `homepage` are taken from [package] above.
[package.metadata.deb]
maintainer = "the phasor authors <noreply@users.noreply.github.com>"
section = "utils"
priority = "optional"
# `$auto` = shared-library deps detected by dpkg-shlibdeps; tmux is required at runtime.
depends = "$auto, tmux"
extended-description = """\
phasor monitors and orchestrates every running AI coding agent on your machine \
— each in its own tmux window — as a live terminal and browser dashboard. \
The `claude` CLI is required at runtime and is not packaged here."""
assets = [
    ["target/release/phasor", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/phasor/README.md", "644"],
    ["LICENSE-MIT", "usr/share/doc/phasor/LICENSE-MIT", "644"],
    ["LICENSE-APACHE", "usr/share/doc/phasor/LICENSE-APACHE", "644"],
]
